Fix: multiselect extra padding only on mobile device

--- a/resources/assets/public/scss/choices.scss
+++ b/resources/assets/public/scss/choices.scss
@@ -307,12 +307,19 @@ $inner-border-color: #ced4da;
     }
     .#{$choices-selector}__item {
       position: relative;
-      padding: 16px;
+      padding: 10px;
       font-size: $choices-font-size-md;
       [dir='rtl'] & {
         text-align: right;
       }
     }
+
+    @media (max-width: 640px) {
+      .#{$choices-selector}__item {
+        padding: 16px;
+      }
+    }
+
     .#{$choices-selector}__item--selectable {
       @media (min-width: 640px) {
         padding-right: 100px;
